# MAI_OS

./: CMakeLists.txt
lab1/: CMakeLists.txt  child1  child1.cpp  child2  child2.cpp  main  main.cpp
lab1/funcs/: funcs.cpp  funcs.h
lab2/: lab2.strace  main  main.cpp
lab3/: CMakeLists.txt  child1.cpp  child2.cpp  main  main.cpp
lab3/funcs/: funcs.cpp  funcs.h
lab4/: Makefile  contract.h  dynamic_program  dynamic_program.c  lab4dynamic.strace  lab4static.strace  libimpl1.c  libimpl2.c  static_program  static_program.c
project/: CMakeLists.txt
project/configs/: example.json
project/src/: dag.cpp  dag.hpp  job.cpp  job.hpp  main.cpp  parser_json.cpp  parser_json.hpp  scheduler.cpp  scheduler.hpp  semaphore.cpp  semaphore.hpp  utils.cpp  utils.hpp
project/tests/: test_dag.cpp  test_semaphore.cpp
